--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,22 +4,25 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/space_invader"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Etagere">
+        <activity android:name=".AddGame" />
+        <activity
+            android:name=".Games"
+            android:label="@string/title_activity_games"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Etagere"
+            android:label="@string/title_activity_etagere"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddGame" />
-        <activity
-            android:name=".Games"
-            android:label="@string/title_activity_games"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
