--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.durpoix.quentin.retrocollection">
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -26,8 +27,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".desc_game" />
-        <activity android:name=".connexion"></activity>
+        <activity android:name=".connexion" />
+        <activity android:name=".Account"></activity>
     </application>
-
 
 </manifest>
